fix(lc): 修复类初始化和内存管理相关问题
- 在类初始化中增加对类实例地址的 retain 操作
- 优化类构造函数名称获取方式
- 修复 deleteSomething 方法中的类型处理逻辑，支持可空类型